cabal-version:      3.4
name:               funcventofcode
version:            0.1.0.0
license:            GPL-3.0-only
license-file:       LICENSE
author:             dfacoet
maintainer:         dfacoet@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: GHC2021

executable funcventofcode
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        funcventofcode
    hs-source-dirs:   src/bin
    default-language: GHC2021
